kubernetes/deprecated/home/kube-system/kube-ops-view/redis-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    application: kube-ops-view-redis
    version: v0.0.1
  name: kube-ops-view-redis
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-ops-view-redis
  template:
    metadata:
      labels:
        application: kube-ops-view-redis
        version: v0.0.1
    spec:
      containers:
      - name: redis
        image: redis:3.2-alpine
        ports:
        - containerPort: 6379
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: 6379
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 30m
            memory: 100Mi
