kubernetes/deprecated/home/kube-system/kube-ops-view/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ops-view
  namespace: kube-system
spec:
  rules:
  - host: kube-ops-view.home.fossar.net
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-ops-view
          servicePort: 80
